--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/CodeComparison/CodeComparisonManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/CodeComparison/CodeComparisonManagement.html
@@ -1,1 +1,31 @@
-﻿
+﻿<vr-panel ng-controller="WhS_Sales_CodeCompareManagementController">
+    <vr-form name="formFilter">
+        <div ng-hide="filterSectionCollapsed">
+            <vr-row removeline>
+                <vr-columns width="normal">
+                    <vr-textbox value="codeStartWith" label="Code Start With"></vr-textbox>
+                </vr-columns>
+                <vr-columns width="normal">
+                    <vr-textbox value="threshold" label="Threshold" isrequired="true"></vr-textbox>
+                </vr-columns>
+                    <span vr-loader="isLoadingSellingNumberPlan">
+                        <vr-whs-be-sellingnumberplan-selector normal-col-num="2" isrequired="true" on-ready="onSellingNumberPlanSelectorReady"></vr-whs-be-sellingnumberplan-selector>
+                    </span>
+                <vr-whs-be-supplier-selector getsuppliers on-ready="onCarrierAccountDirectiveReady" normal-col-num="2" isrequired="true" ismultipleselection></vr-whs-be-supplier-selector>
+            </vr-row>
+        </div>
+        <vr-row removeline>
+            <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
+                <div transclude-to="buttons">
+                    <vr-button type="Load" formname="formFilter" data-onclick="loadClicked"></vr-button>
+                </div>
+            </vr-actionbar>
+        </vr-row>
+        <vr-row>
+            <vr-columns width="fullrow">
+                <vr-whs-sales-codecompare-grid on-ready="scopeModel.onGridReady"></vr-whs-sales-codecompare-grid>
+            </vr-columns>
+        </vr-row>
+    </vr-form>
+
+</vr-panel>
