implementing Live Cdr Page
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41794

--- a/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Directives/LiveCdr/Templates/LiveCdrGridTemplate.html
+++ b/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Directives/LiveCdr/Templates/LiveCdrGridTemplate.html
@@ -3,7 +3,8 @@
                  dataretrievalfunction="dataRetrievalFunction"
                  pagingtype="'PagingOnScroll'"
                  on-ready="onGridReady"
-                 defaultsortbyfieldname="'customerName'"
+                 defaultsortbyfieldname="'attemptDate'"
+                 defaultsortdirection="sortingCalls"
                  idfield="sourceIP" enableautoexport="true">
 
         <vr-datagridcolumn headertext="'Customer'" field="'customerName'" type="'Text'"></vr-datagridcolumn>
