--- a/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/LiveCdr/LiveCdrManagement.html
+++ b/NetworkProvisioning/Code/NP.IVSwitch.Web/NP_IVSwitch/Views/LiveCdr/LiveCdrManagement.html
@@ -20,19 +20,25 @@
                         <vr-textbox label="Route IP" value="routeIP"></vr-textbox>
                     </vr-columns>
                 </vr-row>
-                <!--<vr-row removeline>
+               <vr-row removeline>
                     <vr-columns colnum="2">
                         <vr-select label="Calls" datatextfield="description" datavaluefield="value" datasource="calls" hideremoveicon="true"
-                                   selectedvalues=" selectedcalls" onselectionchanged="" isrequired></vr-select>
+                                   selectedvalues=" selectedcalls" onselectionchanged="" ></vr-select>
                     </vr-columns>
-                    <vr-columns width="normal">
-                        <vr-textbox label="Time" value="time"></vr-textbox>
-                    </vr-columns>
-                    <vr-columns colnum="2">
-                        <vr-select label="Calls" datatextfield="description" datavaluefield="value" datasource="calls" hideremoveicon="true"
-                                   selectedvalues=" selectedcalls" onselectionchanged="" isrequired></vr-select>
-                    </vr-columns>
-                </vr-row>-->
+                   <div ng-show="selectedcalls!=undefined">
+                       <vr-columns width="normal">
+                           <vr-textbox label="Time" value="time"></vr-textbox>
+                       </vr-columns>
+                       <vr-columns colnum="2">
+                           <vr-select label="Unit Time" datatextfield="description" datavaluefield="value" datasource="unitTime" hideremoveicon="true"
+                                      selectedvalues=" selectedUnitTime" onselectionchanged=""></vr-select>
+                       </vr-columns>
+                   </div>
+                   <vr-columns colnum="2">
+                       <vr-select label="Sorting Calls" datatextfield="description" datavaluefield="value" datasource="sortingCalls" hideremoveicon="true"
+                                  selectedvalues=" selectedsortingCalls" onselectionchanged=""></vr-select>
+                   </vr-columns>
+                </vr-row>
             </div>
             <vr-row removeline>
                 <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
