Adding last invoice serial number
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41798

--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/CompanySubscriberInvoiceReport.rdlc
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Reports/CompanySubscriberInvoiceReport.rdlc
@@ -2116,7 +2116,7 @@ Please Ignore the Previous Balance amount if you have already paid that amount.<
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Date</Value>
+                              <Value>Serial Number</Value>
                               <Style>
                                 <FontFamily>Verdana</FontFamily>
                                 <FontSize>8pt</FontSize>
@@ -2255,7 +2255,7 @@ Please Ignore the Previous Balance amount if you have already paid that amount.<
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!CurrencyName.Value</Value>
+                              <Value>=Fields!SerialNumber.Value</Value>
                               <Style>
                                 <FontFamily>Verdana</FontFamily>
                                 <FontSize>8pt</FontSize>
@@ -2276,6 +2276,7 @@ Please Ignore the Previous Balance amount if you have already paid that amount.<
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
+                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
@@ -2588,6 +2589,10 @@ Please Ignore the Previous Balance amount if you have already paid that amount.<
         <Field Name="Amount">
           <DataField>Amount</DataField>
           <rd:TypeName>System.Decimal</rd:TypeName>
+        </Field>
+        <Field Name="SerialNumber">
+          <DataField>SerialNumber</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
         </Field>
       </Fields>
       <rd:DataSetInfo>
