--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/BankDetails/BankDetailsEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/BankDetails/BankDetailsEditor.html
@@ -3,6 +3,9 @@
         <vr-form name="formBankDetailsEditor">
             <vr-row removeline>
                 <vr-columns width="1/2row">
+                    <vr-textbox value="channelName" label="Channel Name"></vr-textbox>
+                </vr-columns>
+                <vr-columns width="1/2row">
                     <vr-textbox value="bank" label="Bank" isrequired="true"></vr-textbox>
                 </vr-columns>
                 <vr-columns width="1/2row">
