Implementing Billing transaction datasource
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41810

--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Definition/InvoiceTypeEditor.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Definition/InvoiceTypeEditor.html
@@ -36,6 +36,11 @@
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
+                <vr-tab header="'Inv To Acc Balance Relation'">
+                    <vr-row>
+                       <vr-invtoaccbalancerelation-definition-selector on-ready="scopeModel.relationDefinitionSelectorReady" normal-col-num="3"></vr-invtoaccbalancerelation-definition-selector>
+                    </vr-row>
+                </vr-tab>
                 <vr-tab header="'Invoice Attachments'">
                     <vr-row>
                         <vr-columns width="fullrow">
