--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/InvoiceSubSectionSettings/InvoiceUISubSectionSettings/MainExtensions/Templates/InvoiceItemSubSectionTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/InvoiceSubSectionSettings/InvoiceUISubSectionSettings/MainExtensions/Templates/InvoiceItemSubSectionTemplate.html
@@ -1,4 +1,14 @@
 ﻿<vr-row>
+    <vr-columns width="1/3row">
+        <vr-select datasource="scopeModel.itemSetNamesCompareOperators"
+                   datatextfield="description"
+                   datavaluefield="value"
+                   selectedvalues="scopeModel.selectedItemSetNameCompareOperator"
+                   label="Operator"
+                   isrequired="true">
+        </vr-select>
+    </vr-columns>
+
     <vr-columns width="1/2row">
         <vr-textbox value="scopeModel.itemSetName" label="Itemset Name" isrequired="true"></vr-textbox>
     </vr-columns>
